# dist/openapi.yaml
@@ -455,7 +455,6 @@ components:
       type: object
       required:
         - img
-        - id
         - name
         - time
         - popularity
@@ -465,8 +464,9 @@ components:
         - ingredients
         - instructions
       properties:
-        id:
+        recipe_id:
           type: integer
+          readOnly: true
         name:
           type: string
           example: Vegan Pasta
@@ -507,14 +507,14 @@ components:
     UserSafe:
       type: object
       required:
-        - id
+        - user_id
         - username
         - email
         - country
         - firstName
         - lastName
       properties:
-        id:
+        user_id:
           type: integer
         username:
           type: string
@@ -544,7 +544,7 @@ components:
     UserSummary:
       type: object
       properties:
-        id:
+        user_id:
           type: integer
         username:
           type: string
@@ -561,14 +561,14 @@ components:
     FamilyRecipe:
       type: object
       required:
-        - id
+        - recipe_id
         - title
         - description
         - originator
         - occasion
         - story
       properties:
-        id:
+        recipe_id:
           type: integer
         title:
           type: string
